<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/back_grey"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        app:title="@string/app_name"
        app:titleTextColor="@color/white"
        android:background="@color/back_grey_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5sp">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="20sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="30sp"
            android:text="@string/mon" />

        <EditText
            android:id="@+id/m1"
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:textAlignment="center"
            android:textSize="25sp"
            android:inputType="number"
            android:hint="@string/tt"
            android:textColorHint="@color/hint" />

        <EditText
            android:id="@+id/m2"
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:textAlignment="center"
            android:textSize="25sp"
            android:inputType="number"
            android:hint="@string/frost"
            android:visibility="invisible"
            android:textColorHint="@color/hint" />

        <EditText
            android:id="@+id/m3"
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:textAlignment="center"
            android:textSize="25sp"
            android:inputType="number"
            android:hint="@string/second"
            android:visibility="invisible"
            android:textColorHint="@color/hint" />

        <Button
            android:id="@+id/btn_m"
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:textAlignment="center"
            android:textSize="25sp"
            android:text="@string/btn_add"/>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5sp">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="20sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="30sp"
            android:text="@string/tue" />

        <EditText
            android:id="@+id/t1"
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:textAlignment="center"
            android:textSize="25sp"
            android:inputType="number"
            android:hint="@string/tt"
            android:textColorHint="@color/hint"
            />

        <EditText
            android:id="@+id/t2"
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:textAlignment="center"
            android:textSize="25sp"
            android:inputType="number"
            android:hint="@string/frost"
            android:visibility="invisible"
            android:textColorHint="@color/hint" />

        <EditText
            android:id="@+id/t3"
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:textAlignment="center"
            android:textSize="25sp"
            android:inputType="number"
            android:hint="@string/second"
            android:visibility="invisible"
            android:textColorHint="@color/hint" />

        <Button
            android:id="@+id/btn_t"
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:textAlignment="center"
            android:textSize="25sp"
            android:text="@string/btn_add"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5sp">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="20sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="30sp"
            android:text="@string/wen" />

        <EditText
            android:id="@+id/w1"
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:textAlignment="center"
            android:textSize="25sp"
            android:inputType="number"
            android:hint="@string/tt"
            android:textColorHint="@color/hint" />

        <EditText
            android:id="@+id/w2"
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:textAlignment="center"
            android:textSize="25sp"
            android:inputType="number"
            android:hint="@string/frost"
            android:visibility="invisible"
            android:textColorHint="@color/hint" />

        <EditText
            android:id="@+id/w3"
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:textAlignment="center"
            android:textSize="25sp"
            android:inputType="number"
            android:hint="@string/second"
            android:visibility="invisible"
            android:textColorHint="@color/hint" />

        <Button
            android:id="@+id/btn_w"
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:textAlignment="center"
            android:textSize="25sp"
            android:text="@string/btn_add"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5sp">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="20sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="30sp"
            android:text="@string/thu" />

        <EditText
            android:id="@+id/th1"
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:textAlignment="center"
            android:textSize="25sp"
            android:inputType="number"
            android:hint="@string/tt"
            android:textColorHint="@color/hint" />

        <EditText
            android:id="@+id/th2"
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:textAlignment="center"
            android:textSize="25sp"
            android:inputType="number"
            android:hint="@string/frost"
            android:visibility="invisible"
            android:textColorHint="@color/hint" />

        <EditText
            android:id="@+id/th3"
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:textAlignment="center"
            android:textSize="25sp"
            android:inputType="number"
            android:hint="@string/second"
            android:visibility="invisible"
            android:textColorHint="@color/hint" />

        <Button
            android:id="@+id/btn_th"
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:textAlignment="center"
            android:textSize="25sp"
            android:text="@string/btn_add"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5sp">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="20sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="30sp"
            android:text="@string/fri" />

        <EditText
            android:id="@+id/f1"
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:textAlignment="center"
            android:textSize="25sp"
            android:inputType="number"
            android:hint="@string/tt"
            android:textColorHint="@color/hint" />

        <EditText
            android:id="@+id/f2"
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:textAlignment="center"
            android:textSize="25sp"
            android:inputType="number"
            android:hint="@string/frost"
            android:visibility="invisible"
            android:textColorHint="@color/hint" />

        <EditText
            android:id="@+id/f3"
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:textAlignment="center"
            android:textSize="25sp"
            android:inputType="number"
            android:hint="@string/second"
            android:visibility="invisible"
            android:textColorHint="@color/hint" />

        <Button
            android:id="@+id/btn_f"
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:textAlignment="center"
            android:textSize="25sp"
            android:text="@string/btn_add"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5sp">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="20sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="30sp"
            android:text="@string/sut" />

        <EditText
            android:id="@+id/s1"
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:textAlignment="center"
            android:textSize="25sp"
            android:inputType="number"
            android:hint="@string/tt"
            android:textColorHint="@color/hint" />

        <EditText
            android:id="@+id/s2"
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:textAlignment="center"
            android:textSize="25sp"
            android:inputType="number"
            android:hint="@string/frost"
            android:visibility="invisible"
            android:textColorHint="@color/hint" />

        <EditText
            android:id="@+id/s3"
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:textAlignment="center"
            android:textSize="25sp"
            android:inputType="number"
            android:hint="@string/second"
            android:visibility="invisible"
            android:textColorHint="@color/hint" />

        <Button
            android:id="@+id/btn_s"
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:textAlignment="center"
            android:textSize="25sp"
            android:text="@string/btn_add"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5sp">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="20sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="23sp"
            android:text="@string/res" />

        <TextView
            android:id="@+id/i1"
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="35sp"/>

        <TextView
            android:id="@+id/i2"
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="35sp"/>

        <TextView
            android:id="@+id/i3"
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="35sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5sp">

        <TextView
            android:id="@+id/tv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="50sp"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="35dp"
        android:text="@string/btn" />

</LinearLayout>